libs/code-view/code-view-tree-sitter-kotlin/tree-sitter-kotlin/test/corpus/source-files.txt
================================================================================
File annotations
================================================================================

@file:JvmName("HelloWorld")

val x = 4

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    (variable_declaration
      (simple_identifier))
    (integer_literal)))

================================================================================
Multiple file annotations
================================================================================

@file:JvmMultifileClass
@file:JvmName("BuildersKt")
@file:OptIn(ExperimentalContracts::class)

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (user_type
      (type_identifier)))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_content))))))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (callable_reference
            (simple_identifier)))))))

================================================================================
Imports
================================================================================

import java.util.*
import java.util.Scanner
import java.util.StringBuilder

import java.io.Path
import java.io.Files
fun main() {
}

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier))
      (wildcard_import))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))))
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))))
  (function_declaration
    (simple_identifier)
    (function_value_parameters)
    (function_body)))

================================================================================
Multiple Imports On A Single Line
================================================================================

import java.io.Path import java.io.Files

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))))

================================================================================
Import followed by multiline comment
================================================================================

import foo.bar

/**
 * Documentation
 */
class MyClass

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      (identifier
        (simple_identifier)
        (simple_identifier))))
  (multiline_comment)
  (class_declaration
    (type_identifier)))
